<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E0E0E0"
        tools:context=".MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
    >

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
        >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_team"
                    android:textSize="14sp"
                    android:textColor="#616161"
                    android:fontFamily="sans-serif-medium"
                    android:layout_margin="16dp"
                    android:layout_gravity="center"
            />
            <TextView
                    android:id="@+id/teamA_score_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/initial_score"
                    android:textSize="56sp"
                    android:textColor="#000000"
                    android:fontFamily="sans-serif-light"
                    android:layout_marginBottom="24dp"
                    android:layout_gravity="center"

            />
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/basket_3_points"
                    android:textAllCaps="true"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="incrementPoints3TeamA"
            />

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/basket_2_points"
                    android:textAllCaps="true"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="incrementPoints2TeamA"
            />

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/free_throw"
                    android:textAllCaps="true"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="incrementFreeThrowTeamA"

            />
        </LinearLayout>

        <View android:layout_width="1dp"
              android:layout_height="match_parent"
              android:background="@android:color/background_dark"
        />

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
        >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/second_team"
                    android:textSize="14sp"
                    android:textColor="#616161"
                    android:fontFamily="sans-serif-medium"
                    android:layout_margin="16dp"
                    android:layout_gravity="center"
            />
            <TextView
                    android:id="@+id/teamB_score_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/initial_score"
                    android:textSize="56sp"
                    android:textColor="#000000"
                    android:fontFamily="sans-serif-light"
                    android:layout_marginBottom="24dp"
                    android:layout_gravity="center"

            />
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/basket_3_points"
                    android:textAllCaps="true"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="incrementPoints3TeamB"
            />

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/basket_2_points"
                    android:textAllCaps="true"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="incrementPoints2TeamB"
            />

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/free_throw"
                    android:textAllCaps="true"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="incrementFreeThrowTeamB"
            />
        </LinearLayout>

    </LinearLayout>


    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_button"
            android:textAllCaps="true"
            android:layout_margin="32dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:onClick="resetScore"

    />

</RelativeLayout>